--- a/Touri_Server/Touri_Server.csproj
+++ b/Touri_Server/Touri_Server.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Controllers\ExpertisesController.cs" />
     <Compile Include="Controllers\GuidesController.cs" />
     <Compile Include="Controllers\ImagesController.cs" />
+    <Compile Include="Controllers\LanguagesController.cs" />
     <Compile Include="Hubs\ChatHub.cs" />
     <Compile Include="Models\APIModels.cs" />
     <Compile Include="Controllers\AccountController.cs" />
