--- a/Touri_Server/Touri_Server.csproj
+++ b/Touri_Server/Touri_Server.csproj
@@ -281,6 +281,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
+    <Content Include="Build\Nativus.sql" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
