--- a/Touri_Server/bin/Touri_Server.dll.config
+++ b/Touri_Server/bin/Touri_Server.dll.config
@@ -9,8 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Touri_Server-20150421085854.mdf;Initial Catalog=aspnet-Touri_Server-20150421085854;Integrated Security=True" providerName="System.Data.SqlClient" />   
-  <add name="NativusDBEntities" connectionString="metadata=res://*/Models.TouriModel.csdl|res://*/Models.TouriModel.ssdl|res://*/Models.TouriModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SASI-PC\SQLEXPRESS;initial catalog=NativusDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Account_Webapp-20150502120614.mdf;Initial Catalog=aspnet-Account_Webapp-20150502120614;Integrated Security=True" providerName="System.Data.SqlClient" />    
+    <!--<add name="DefaultConnection" connectionString="metadata=res://*/Models.TouriModel.csdl|res://*/Models.TouriModel.ssdl|res://*/Models.TouriModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SASI-IBM\SQLEXPRESS;initial catalog=TouriDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="NativusDBEntities" connectionString="metadata=res://*/Models.TouriModel.csdl|res://*/Models.TouriModel.ssdl|res://*/Models.TouriModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SASI-IBM\SQLEXPRESS;initial catalog=TouriDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <authentication mode="None" />
