--- a/Touri_Server/Touri_Server.csproj
+++ b/Touri_Server/Touri_Server.csproj
@@ -243,6 +243,9 @@
     <Compile Include="Models\GuideProfile.cs">
       <DependentUpon>TouriModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\GuideProfileImage.cs">
+      <DependentUpon>TouriModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Language.cs">
       <DependentUpon>TouriModel.tt</DependentUpon>
