--- a/Touri_Server/Touri_Server.csproj
+++ b/Touri_Server/Touri_Server.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Controllers\ImagesController.cs" />
     <Compile Include="Controllers\LanguagesController.cs" />
     <Compile Include="Controllers\MyGuideProfileController.cs" />
+    <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Hubs\ChatHub.cs" />
     <Compile Include="Models\APIModels.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -248,6 +249,9 @@
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Language.cs">
+      <DependentUpon>TouriModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Message.cs">
       <DependentUpon>TouriModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Review.cs">
