--- a/Touri_Server/Touri_Server.csproj
+++ b/Touri_Server/Touri_Server.csproj
@@ -281,6 +281,9 @@
     <Compile Include="Models\TravellerProfile.cs">
       <DependentUpon>TouriModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserLastMessage.cs">
+      <DependentUpon>TouriModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
